Fix submit button not hidden in public share auth page
While a message is being sent the submit button in the chat view is
hidden by setting the "hidden" CSS class to it. However, in "guest.css"
an explicit "display" property is set for submit buttons; this rule is
more specific than the generic rule for ".hidden" elements, and thus
overrides it, causing the submit button to be shown even when the
"hidden" CSS class is set. Therefore, an explicit rule is needed to set
"display: none" for hidden submit buttons.

--- a/css/publicshareauth.scss
+++ b/css/publicshareauth.scss
@@ -232,3 +232,9 @@ input#request-password-button:disabled ~ .icon {
 #talk-sidebar input.icon-confirm[type="submit"] {
 	top: unset;
 }
+
+/* Unset conflicting rules from guest.css for the sidebar */
+#talk-sidebar input[type="submit"].hidden,
+#talk-sidebar input.icon-confirm[type="submit"].hidden {
+	display: none;
+}
